[gd_scene load_steps=13 format=3 uid="uid://dkjiat4fj8fhu"]

[ext_resource type="Script" path="res://Scripts/Player/player.gd" id="1_7ugdm"]
[ext_resource type="Texture2D" uid="uid://2wm8y1i7bupg" path="res://Assets/Player/girl_face.png" id="1_71fig"]
[ext_resource type="Texture2D" uid="uid://dioln88su3mqj" path="res://Assets/Player/arm.png" id="2_ladvj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p88gc"]
size = Vector2(100, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jficq"]
size = Vector2(90, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_whcsv"]
radius = 65.0

[sub_resource type="Animation" id="Animation_x7rfu"]

[sub_resource type="Animation" id="Animation_to5ql"]
resource_name = "LeftAttack"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arms/LeftArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-81, 0), Vector2(-155, 0), Vector2(-81, 0)]
}

[sub_resource type="Animation" id="Animation_aylmc"]
length = 0.001

[sub_resource type="Animation" id="Animation_0icaw"]
resource_name = "RightAttack"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arms/RightArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(81, 0), Vector2(81, 0), Vector2(155, 0), Vector2(81, 0)]
}

[sub_resource type="Animation" id="Animation_0wdk6"]
resource_name = "TopTap"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arms/LeftArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.26, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-81, 0), Vector2(-20, 0), Vector2(-35, -120), Vector2(-81, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arms/LeftArm:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.26, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.5708, 1.5708, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Arms/RightArm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.26, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(81, 0), Vector2(20, 0), Vector2(35, -120), Vector2(81, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Arms/RightArm:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.26, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -1.5708, -1.5708, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Arms/RightArm:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.26, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.3, 0.3), Vector2(0, 0.3), Vector2(0.7, 0.3), Vector2(0, 0), Vector2(0.3, 0.3)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Arms/RightArm:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Arms/LeftArm:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2, 0.26, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.3, 0.3), Vector2(0, 0.3), Vector2(0.7, 0.3), Vector2(0, 0), Vector2(0.3, 0.3)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Arms/LeftArm:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wqqjk"]
_data = {
"DownTap": SubResource("Animation_x7rfu"),
"LeftAttack": SubResource("Animation_to5ql"),
"RESET": SubResource("Animation_aylmc"),
"RightAttack": SubResource("Animation_0icaw"),
"TopTap": SubResource("Animation_0wdk6")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(1.00959, 0.949049)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_7ugdm")

[node name="Arms" type="Node2D" parent="."]

[node name="LeftArm" type="Sprite2D" parent="Arms"]
position = Vector2(-81, 0)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_ladvj")

[node name="AttackRangeL" type="Area2D" parent="Arms/LeftArm"]
collision_layer = 4
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Arms/LeftArm/AttackRangeL"]
polygon = PackedVector2Array(0, -10, 270, -106.667, 270, 23.3333, 166.667, 56.6667, 43.3333, 66.6667, -66.6667, 60, -113.333, 63.3333, -166.667, 83.3333, -213.333, 73.3333, -230, 56.6667, -236.667, 33.3333, -236.667, 13.3333, -223.333, -26.6667, -170, -36.6667, -116.667, 0)

[node name="RightArm" type="Sprite2D" parent="Arms"]
position = Vector2(81, 0)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_ladvj")
flip_h = true

[node name="AttackRangeR" type="Area2D" parent="Arms/RightArm"]
position = Vector2(-540, 0)
collision_layer = 4
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Arms/RightArm/AttackRangeR"]
position = Vector2(540, 0)
rotation = 3.14159
scale = Vector2(1, -1)
polygon = PackedVector2Array(0, -10, 270, -106.667, 270, 23.3333, 166.667, 56.6667, 43.3333, 66.6667, -66.6667, 60, -113.333, 63.3333, -166.667, 83.3333, -213.333, 73.3333, -230, 56.6667, -236.667, 33.3333, -236.667, 13.3333, -223.333, -26.6667, -170, -36.6667, -116.667, 0)

[node name="VerticalDamage" type="Node2D" parent="."]

[node name="TopTapRange" type="Area2D" parent="VerticalDamage"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="VerticalDamage/TopTapRange"]
position = Vector2(0, -76)
shape = SubResource("RectangleShape2D_p88gc")
disabled = true

[node name="GroundPound" type="Area2D" parent="VerticalDamage"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="VerticalDamage/GroundPound"]
position = Vector2(0, 71)
shape = SubResource("RectangleShape2D_jficq")
disabled = true

[node name="GirlFace" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_71fig")

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("CircleShape2D_whcsv")

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wqqjk")
}

[connection signal="body_entered" from="Arms/LeftArm/AttackRangeL" to="." method="_on_attack_range_l_body_entered"]
[connection signal="body_entered" from="Arms/RightArm/AttackRangeR" to="." method="_on_attack_range_r_body_entered"]
